src/mseq2latex/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> eq_field
Rule 1     eq_field -> LBRACE EQ expression RBRACE
Rule 2     expression -> expression expression
Rule 3     expression -> CMD_FRACTION LPAREN expression COMMA expression RPAREN
Rule 4     expression -> CMD_FRACTION LPAREN expression SEMICOLON expression RPAREN
Rule 5     expression -> IDENTIFIER
Rule 6     expression -> NUMBER
Rule 7     expression -> CMD_RADICAL LPAREN expression COMMA expression RPAREN
Rule 8     expression -> CMD_RADICAL LPAREN expression RPAREN
Rule 9     expression -> CMD_SUP LPAREN expression RPAREN
Rule 10    expression -> CMD_SUB LPAREN expression RPAREN
Rule 11    expression -> CMD_ALIGN_INC LPAREN expression RPAREN
Rule 12    expression -> CMD_ALIGN_DEC LPAREN expression RPAREN
Rule 13    expression -> CMD_BRACKET LPAREN expression RPAREN
Rule 14    expression -> CMD_BRACKET bracket_options LPAREN expression RPAREN
Rule 15    bracket_options -> BRACKET_OPTION
Rule 16    bracket_options -> bracket_options BRACKET_OPTION
Rule 17    expression -> CMD_DISPLACE LPAREN RPAREN
Rule 18    expression -> CMD_DISPLACE LPAREN expression RPAREN
Rule 19    expression -> CMD_DISPLACE displace_options LPAREN RPAREN
Rule 20    expression -> CMD_DISPLACE displace_options LPAREN expression RPAREN
Rule 21    displace_options -> DISPLACE_OPTION
Rule 22    displace_options -> displace_options DISPLACE_OPTION
Rule 23    expression -> CMD_INTEGRAL LPAREN expression COMMA expression COMMA expression RPAREN
Rule 24    expression -> CMD_INTEGRAL integral_options LPAREN expression COMMA expression COMMA expression RPAREN
Rule 25    integral_options -> INTEGRAL_OPTION
Rule 26    integral_options -> integral_options INTEGRAL_OPTION
Rule 27    expression -> CMD_LIST LPAREN list_elements RPAREN
Rule 28    list_elements -> expression
Rule 29    list_elements -> list_elements COMMA expression
Rule 30    list_elements -> list_elements SEMICOLON expression
Rule 31    expression -> CMD_OVERSTRIKE LPAREN overstrike_elements RPAREN
Rule 32    expression -> CMD_OVERSTRIKE overstrike_options LPAREN overstrike_elements RPAREN
Rule 33    overstrike_options -> ALIGNMENT_OPTION
Rule 34    overstrike_options -> overstrike_options ALIGNMENT_OPTION
Rule 35    overstrike_elements -> expression
Rule 36    overstrike_elements -> overstrike_elements COMMA expression
Rule 37    expression -> CMD_ARRAY LPAREN array_elements RPAREN
Rule 38    expression -> CMD_ARRAY array_options LPAREN array_elements RPAREN
Rule 39    array_options -> ALIGNMENT_OPTION
Rule 40    array_options -> ARRAY_OPTION
Rule 41    array_options -> array_options ALIGNMENT_OPTION
Rule 42    array_options -> array_options ARRAY_OPTION
Rule 43    array_elements -> expression
Rule 44    array_elements -> array_elements COMMA expression
Rule 45    expression -> CMD_BOX LPAREN expression RPAREN
Rule 46    expression -> CMD_BOX box_options LPAREN expression RPAREN
Rule 47    box_options -> BOX_OPTION
Rule 48    box_options -> box_options BOX_OPTION
Rule 49    expression -> TEXT
Rule 50    expression -> OPERATOR

Terminals, with rules where they appear

ALIGNMENT_OPTION     : 33 34 39 41
ARRAY_OPTION         : 40 42
BOX_OPTION           : 47 48
BRACKET_OPTION       : 15 16
CMD_ALIGN_DEC        : 12
CMD_ALIGN_INC        : 11
CMD_ARRAY            : 37 38
CMD_BOX              : 45 46
CMD_BRACKET          : 13 14
CMD_DISPLACE         : 17 18 19 20
CMD_FRACTION         : 3 4
CMD_INTEGRAL         : 23 24
CMD_LIST             : 27
CMD_OVERSTRIKE       : 31 32
CMD_RADICAL          : 7 8
CMD_SUB              : 10
CMD_SUP              : 9
COMMA                : 3 7 23 23 24 24 29 36 44
DISPLACE_OPTION      : 21 22
EQ                   : 1
IDENTIFIER           : 5
INTEGRAL_OPTION      : 25 26
LBRACE               : 1
LPAREN               : 3 4 7 8 9 10 11 12 13 14 17 18 19 20 23 24 27 31 32 37 38 45 46
NUMBER               : 6
OPERATOR             : 50
RBRACE               : 1
RPAREN               : 3 4 7 8 9 10 11 12 13 14 17 18 19 20 23 24 27 31 32 37 38 45 46
SEMICOLON            : 4 30
TEXT                 : 49
error                : 

Nonterminals, with rules where they appear

array_elements       : 37 38 44
array_options        : 38 41 42
box_options          : 46 48
bracket_options      : 14 16
displace_options     : 19 20 22
eq_field             : 0
expression           : 1 2 2 3 3 4 4 7 7 8 9 10 11 12 13 14 18 20 23 23 23 24 24 24 28 29 30 35 36 43 44 45 46
integral_options     : 24 26
list_elements        : 27 29 30
overstrike_elements  : 31 32 36
overstrike_options   : 32 34

Parsing method: LALR

state 0

    (0) S' -> . eq_field
    (1) eq_field -> . LBRACE EQ expression RBRACE

    LBRACE          shift and go to state 2

    eq_field                       shift and go to state 1

state 1

    (0) S' -> eq_field .



state 2

    (1) eq_field -> LBRACE . EQ expression RBRACE

    EQ              shift and go to state 3


state 3

    (1) eq_field -> LBRACE EQ . expression RBRACE
    (2) expression -> . expression expression
    (3) expression -> . CMD_FRACTION LPAREN expression COMMA expression RPAREN
    (4) expression -> . CMD_FRACTION LPAREN expression SEMICOLON expression RPAREN
    (5) expression -> . IDENTIFIER
    (6) expression -> . NUMBER
    (7) expression -> . CMD_RADICAL LPAREN expression COMMA expression RPAREN
    (8) expression -> . CMD_RADICAL LPAREN expression RPAREN
    (9) expression -> . CMD_SUP LPAREN expression RPAREN
    (10) expression -> . CMD_SUB LPAREN expression RPAREN
    (11) expression -> . CMD_ALIGN_INC LPAREN expression RPAREN
    (12) expression -> . CMD_ALIGN_DEC LPAREN expression RPAREN
    (13) expression -> . CMD_BRACKET LPAREN expression RPAREN
    (14) expression -> . CMD_BRACKET bracket_options LPAREN expression RPAREN
    (17) expression -> . CMD_DISPLACE LPAREN RPAREN
    (18) expression -> . CMD_DISPLACE LPAREN expression RPAREN
    (19) expression -> . CMD_DISPLACE displace_options LPAREN RPAREN
    (20) expression -> . CMD_DISPLACE displace_options LPAREN expression RPAREN
    (23) expression -> . CMD_INTEGRAL LPAREN expression COMMA expression COMMA expression RPAREN
    (24) expression -> . CMD_INTEGRAL integral_options LPAREN expression COMMA expression COMMA expression RPAREN
    (27) expression -> . CMD_LIST LPAREN list_elements RPAREN
    (31) expression -> . CMD_OVERSTRIKE LPAREN overstrike_elements RPAREN
    (32) expression -> . CMD_OVERSTRIKE overstrike_options LPAREN overstrike_elements RPAREN
    (37) expression -> . CMD_ARRAY LPAREN array_elements RPAREN
    (38) expression -> . CMD_ARRAY array_options LPAREN array_elements RPAREN
    (45) expression -> . CMD_BOX LPAREN expression RPAREN
    (46) expression -> . CMD_BOX box_options LPAREN expression RPAREN
    (49) expression -> . TEXT
    (50) expression -> . OPERATOR

    CMD_FRACTION    shift and go to state 5
    IDENTIFIER      shift and go to state 6
    NUMBER          shift and go to state 7
    CMD_RADICAL     shift and go to state 8
    CMD_SUP         shift and go to state 9
    CMD_SUB         shift and go to state 10
    CMD_ALIGN_INC   shift and go to state 11
    CMD_ALIGN_DEC   shift and go to state 12
    CMD_BRACKET     shift and go to state 13
    CMD_DISPLACE    shift and go to state 14
    CMD_INTEGRAL    shift and go to state 15
    CMD_LIST        shift and go to state 16
    CMD_OVERSTRIKE  shift and go to state 17
    CMD_ARRAY       shift and go to state 18
    CMD_BOX         shift and go to state 19
    TEXT            shift and go to state 20
    OPERATOR        shift and go to state 21

    expression                     shift and go to state 4

state 4

    (1) eq_field -> LBRACE EQ expression . RBRACE
    (2) expression -> expression . expression
    (2) expression -> . expression expression
    (3) expression -> . CMD_FRACTION LPAREN expression COMMA expression RPAREN
    (4) expression -> . CMD_FRACTION LPAREN expression SEMICOLON expression RPAREN
    (5) expression -> . IDENTIFIER
    (6) expression -> . NUMBER
    (7) expression -> . CMD_RADICAL LPAREN expression COMMA expression RPAREN
    (8) expression -> . CMD_RADICAL LPAREN expression RPAREN
    (9) expression -> . CMD_SUP LPAREN expression RPAREN
    (10) expression -> . CMD_SUB LPAREN expression RPAREN
    (11) expression -> . CMD_ALIGN_INC LPAREN expression RPAREN
    (12) expression -> . CMD_ALIGN_DEC LPAREN expression RPAREN
    (13) expression -> . CMD_BRACKET LPAREN expression RPAREN
    (14) expression -> . CMD_BRACKET bracket_options LPAREN expression RPAREN
    (17) expression -> . CMD_DISPLACE LPAREN RPAREN
    (18) expression -> . CMD_DISPLACE LPAREN expression RPAREN
    (19) expression -> . CMD_DISPLACE displace_options LPAREN RPAREN
    (20) expression -> . CMD_DISPLACE displace_options LPAREN expression RPAREN
    (23) expression -> . CMD_INTEGRAL LPAREN expression COMMA expression COMMA expression RPAREN
    (24) expression -> . CMD_INTEGRAL integral_options LPAREN expression COMMA expression COMMA expression RPAREN
    (27) expression -> . CMD_LIST LPAREN list_elements RPAREN
    (31) expression -> . CMD_OVERSTRIKE LPAREN overstrike_elements RPAREN
    (32) expression -> . CMD_OVERSTRIKE overstrike_options LPAREN overstrike_elements RPAREN
    (37) expression -> . CMD_ARRAY LPAREN array_elements RPAREN
    (38) expression -> . CMD_ARRAY array_options LPAREN array_elements RPAREN
    (45) expression -> . CMD_BOX LPAREN expression RPAREN
    (46) expression -> . CMD_BOX box_options LPAREN expression RPAREN
    (49) expression -> . TEXT
    (50) expression -> . OPERATOR

    RBRACE          shift and go to state 23
    CMD_FRACTION    shift and go to state 5
    IDENTIFIER      shift and go to state 6
    NUMBER          shift and go to state 7
    CMD_RADICAL     shift and go to state 8
    CMD_SUP         shift and go to state 9
    CMD_SUB         shift and go to state 10
    CMD_ALIGN_INC   shift and go to state 11
    CMD_ALIGN_DEC   shift and go to state 12
    CMD_BRACKET     shift and go to state 13
    CMD_DISPLACE    shift and go to state 14
    CMD_INTEGRAL    shift and go to state 15
    CMD_LIST        shift and go to state 16
    CMD_OVERSTRIKE  shift and go to state 17
    CMD_ARRAY       shift and go to state 18
    CMD_BOX         shift and go to state 19
    TEXT            shift and go to state 20
    OPERATOR        shift and go to state 21

    expression                     shift and go to state 22

state 5

    (3) expression -> CMD_FRACTION . LPAREN expression COMMA expression RPAREN
    (4) expression -> CMD_FRACTION . LPAREN expression SEMICOLON expression RPAREN

    LPAREN          shift and go to state 24


state 6

    (5) expression -> IDENTIFIER .

    RBRACE          reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_FRACTION    reduce using rule 5 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 5 (expression -> IDENTIFIER .)
    NUMBER          reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_RADICAL     reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_SUP         reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_SUB         reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_ALIGN_INC   reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_ALIGN_DEC   reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_BRACKET     reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_DISPLACE    reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_INTEGRAL    reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_LIST        reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_OVERSTRIKE  reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_ARRAY       reduce using rule 5 (expression -> IDENTIFIER .)
    CMD_BOX         reduce using rule 5 (expression -> IDENTIFIER .)
    TEXT            reduce using rule 5 (expression -> IDENTIFIER .)
    OPERATOR        reduce using rule 5 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 5 (expression -> IDENTIFIER .)
    SEMICOLON       reduce using rule 5 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 5 (expression -> IDENTIFIER .)


state 7

    (6) expression -> NUMBER .

    RBRACE          reduce using rule 6 (expression -> NUMBER .)
    CMD_FRACTION    reduce using rule 6 (expression -> NUMBER .)
    IDENTIFIER      reduce using rule 6 (expression -> NUMBER .)
    NUMBER          reduce using rule 6 (expression -> NUMBER .)
    CMD_RADICAL     reduce using rule 6 (expression -> NUMBER .)
    CMD_SUP         reduce using rule 6 (expression -> NUMBER .)
    CMD_SUB         reduce using rule 6 (expression -> NUMBER .)
    CMD_ALIGN_INC   reduce using rule 6 (expression -> NUMBER .)
    CMD_ALIGN_DEC   reduce using rule 6 (expression -> NUMBER .)
    CMD_BRACKET     reduce using rule 6 (expression -> NUMBER .)
    CMD_DISPLACE    reduce using rule 6 (expression -> NUMBER .)
    CMD_INTEGRAL    reduce using rule 6 (expression -> NUMBER .)
    CMD_LIST        reduce using rule 6 (expression -> NUMBER .)
    CMD_OVERSTRIKE  reduce using rule 6 (expression -> NUMBER .)
    CMD_ARRAY       reduce using rule 6 (expression -> NUMBER .)
    CMD_BOX         reduce using rule 6 (expression -> NUMBER .)
    TEXT            reduce using rule 6 (expression -> NUMBER .)
    OPERATOR        reduce using rule 6 (expression -> NUMBER .)
    COMMA           reduce using rule 6 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 6 (expression -> NUMBER .)
    RPAREN          reduce using rule 6 (expression -> NUMBER .)


state 8

    (7) expression -> CMD_RADICAL . LPAREN expression COMMA expression RPAREN
    (8) expression -> CMD_RADICAL . LPAREN expression RPAREN

    LPAREN          shift and go to state 25


state 9

    (9) expression -> CMD_SUP . LPAREN expression RPAREN

    LPAREN          shift and go to state 26


state 10

    (10) expression -> CMD_SUB . LPAREN expression RPAREN

    LPAREN          shift and go to state 27


state 11

    (11) expression -> CMD_ALIGN_INC . LPAREN expression RPAREN

    LPAREN          shift and go to state 28


state 12

    (12) expression -> CMD_ALIGN_DEC . LPAREN expression RPAREN

    LPAREN          shift and go to state 29


state 13

    (13) expression -> CMD_BRACKET . LPAREN expression RPAREN
    (14) expression -> CMD_BRACKET . bracket_options LPAREN expression RPAREN
    (15) bracket_options -> . BRACKET_OPTION
    (16) bracket_options -> . bracket_options BRACKET_OPTION

    LPAREN          shift and go to state 30
    BRACKET_OPTION  shift and go to state 32

    bracket_options                shift and go to state 31

state 14

    (17) expression -> CMD_DISPLACE . LPAREN RPAREN
    (18) expression -> CMD_DISPLACE . LPAREN expression RPAREN
    (19) expression -> CMD_DISPLACE . displace_options LPAREN RPAREN
    (20) expression -> CMD_DISPLACE . displace_options LPAREN expression RPAREN
    (21) displace_options -> . DISPLACE_OPTION
    (22) displace_options -> . displace_options DISPLACE_OPTION

    LPAREN          shift and go to state 33
    DISPLACE_OPTION shift and go to state 35

    displace_options               shift and go to state 34

state 15

    (23) expression -> CMD_INTEGRAL . LPAREN expression COMMA expression COMMA expression RPAREN
    (24) expression -> CMD_INTEGRAL . integral_options LPAREN expression COMMA expression COMMA expression RPAREN
    (25) integral_options -> . INTEGRAL_OPTION
    (26) integral_options -> . integral_options INTEGRAL_OPTION

    LPAREN          shift and go to state 36
    INTEGRAL_OPTION shift and go to state 38

    integral_options               shift and go to state 37

state 16

    (27) expression -> CMD_LIST . LPAREN list_elements RPAREN

    LPAREN          shift and go to state 39


state 17

    (31) expression -> CMD_OVERSTRIKE . LPAREN overstrike_elements RPAREN
    (32) expression -> CMD_OVERSTRIKE . overstrike_options LPAREN overstrike_elements RPAREN
    (33) overstrike_options -> . ALIGNMENT_OPTION
    (34) overstrike_options -> . overstrike_options ALIGNMENT_OPTION

    LPAREN          shift and go to state 40
    ALIGNMENT_OPTION shift and go to state 42

    overstrike_options             shift and go to state 41

state 18

    (37) expression -> CMD_ARRAY . LPAREN array_elements RPAREN
    (38) expression -> CMD_ARRAY . array_options LPAREN array_elements RPAREN
    (39) array_options -> . ALIGNMENT_OPTION
    (40) array_options -> . ARRAY_OPTION
    (41) array_options -> . array_options ALIGNMENT_OPTION
    (42) array_options -> . array_options ARRAY_OPTION

    LPAREN          shift and go to state 43
    ALIGNMENT_OPTION shift and go to state 45
    ARRAY_OPTION    shift and go to state 46

    array_options                  shift and go to state 44

state 19

    (45) expression -> CMD_BOX . LPAREN expression RPAREN
    (46) expression -> CMD_BOX . box_options LPAREN expression RPAREN
    (47) box_options -> . BOX_OPTION
    (48) box_options -> . box_options BOX_OPTION

    LPAREN          shift and go to state 47
    BOX_OPTION      shift and go to state 49

    box_options                    shift and go to state 48

state 20

    (49) expression -> TEXT .

    RBRACE          reduce using rule 49 (expression -> TEXT .)
    CMD_FRACTION    reduce using rule 49 (expression -> TEXT .)
    IDENTIFIER      reduce using rule 49 (expression -> TEXT .)
    NUMBER          reduce using rule 49 (expression -> TEXT .)
    CMD_RADICAL     reduce using rule 49 (expression -> TEXT .)
    CMD_SUP         reduce using rule 49 (expression -> TEXT .)
    CMD_SUB         reduce using rule 49 (expression -> TEXT .)
    CMD_ALIGN_INC   reduce using rule 49 (expression -> TEXT .)
    CMD_ALIGN_DEC   reduce using rule 49 (expression -> TEXT .)
    CMD_BRACKET     reduce using rule 49 (expression -> TEXT .)
    CMD_DISPLACE    reduce using rule 49 (expression -> TEXT .)
    CMD_INTEGRAL    reduce using rule 49 (expression -> TEXT .)
    CMD_LIST        reduce using rule 49 (expression -> TEXT .)
    CMD_OVERSTRIKE  reduce using rule 49 (expression -> TEXT .)
    CMD_ARRAY       reduce using rule 49 (expression -> TEXT .)
    CMD_BOX         reduce using rule 49 (expression -> TEXT .)
    TEXT            reduce using rule 49 (expression -> TEXT .)
    OPERATOR        reduce using rule 49 (expression -> TEXT .)
    COMMA           reduce using rule 49 (expression -> TEXT .)
    SEMICOLON       reduce using rule 49 (expression -> TEXT .)
    RPAREN          reduce using rule 49 (expression -> TEXT .)


state 21

    (50) expression -> OPERATOR .

    RBRACE          reduce using rule 50 (expression -> OPERATOR .)
    CMD_FRACTION    reduce using rule 50 (expression -> OPERATOR .)
    IDENTIFIER      reduce using rule 50 (expression -> OPERATOR .)
    NUMBER          reduce using rule 50 (expression -> OPERATOR .)
    CMD_RADICAL     reduce using rule 50 (expression -> OPERATOR .)
    CMD_SUP         reduce using rule 50 (expression -> OPERATOR .)
    CMD_SUB         reduce using rule 50 (expression -> OPERATOR .)
    CMD_ALIGN_INC   reduce using rule 50 (expression -> OPERATOR .)
    CMD_ALIGN_DEC   reduce using rule 50 (expression -> OPERATOR .)
    CMD_BRACKET     reduce using rule 50 (expression -> OPERATOR .)
    CMD_DISPLACE    reduce using rule 50 (expression -> OPERATOR .)
    CMD_INTEGRAL    reduce using rule 50 (expression -> OPERATOR .)
    CMD_LIST        reduce using rule 50 (expression -> OPERATOR .)
    CMD_OVERSTRIKE  reduce using rule 50 (expression -> OPERATOR .)
    CMD_ARRAY       reduce using rule 50 (expression -> OPERATOR .)
    CMD_BOX         reduce using rule 50 (expression -> OPERATOR .)
    TEXT            reduce using rule 50 (expression -> OPERATOR .)
    OPERATOR        reduce using rule 50 (expression -> OPERATOR .)
    COMMA           reduce using rule 50 (expression -> OPERATOR .)
    SEMICOLON       reduce using rule 50 (expression -> OPERATOR .)
    RPAREN          reduce using rule 50 (expression -> OPERATOR .)


state 22

    (2) expression -> expression expression .
    (2) expression -> expression . expression
    (2) expression -> . expression expression
    (3) expression -> . CMD_FRACTION LPAREN expression COMMA expression RPAREN
    (4) expression -> . CMD_FRACTION LPAREN expression SEMICOLON expression RPAREN
    (5) expression -> . IDENTIFIER
    (6) expression -> . NUMBER
    (7) expression -> . CMD_RADICAL LPAREN expression COMMA expression RPAREN
    (8) expression -> . CMD_RADICAL LPAREN expression RPAREN
    (9) expression -> . CMD_SUP LPAREN expression RPAREN
    (10) expression -> . CMD_SUB LPAREN expression RPAREN
    (11) expression -> . CMD_ALIGN_INC LPAREN expression RPAREN
    (12) expression -> . CMD_ALIGN_DEC LPAREN expression RPAREN
    (13) expression -> . CMD_BRACKET LPAREN expression RPAREN
    (14) expression -> . CMD_BRACKET bracket_options LPAREN expression RPAREN
    (17) expression -> . CMD_DISPLACE LPAREN RPAREN
    (18) expression -> . CMD_DISPLACE LPAREN expression RPAREN
    (19) expression -> . CMD_DISPLACE displace_options LPAREN RPAREN
    (20) expression -> . CMD_DISPLACE displace_options LPAREN expression RPAREN
    (23) expression -> . CMD_INTEGRAL LPAREN expression COMMA expression COMMA expression RPAREN
    (24) expression -> . CMD_INTEGRAL integral_options LPAREN expression COMMA expression COMMA expression RPAREN
    (27) expression -> . CMD_LIST LPAREN list_elements RPAREN
    (31) expression -> . CMD_OVERSTRIKE LPAREN overstrike_elements RPAREN
    (32) expression -> . CMD_OVERSTRIKE overstrike_options LPAREN overstrike_elements RPAREN
    (37) expression -> . CMD_ARRAY LPAREN array_elements RPAREN
    (38) expression -> . CMD_ARRAY array_options LPAREN array_elements RPAREN
    (45) expression -> . CMD_BOX LPAREN expression RPAREN
    (46) expression -> . CMD_BOX box_options LPAREN expression RPAREN
    (49) expression -> . TEXT
    (50) expression -> . OPERATOR

  ! shift/reduce conflict for CMD_FRACTION resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for CMD_RADICAL resolved as shift
  ! shift/reduce conflict for CMD_SUP resolved as shift
  ! shift/reduce conflict for CMD_SUB resolved as shift
  ! shift/reduce conflict for CMD_ALIGN_INC resolved as shift
  ! shift/reduce conflict for CMD_ALIGN_DEC resolved as shift
  ! shift/reduce conflict for CMD_BRACKET resolved as shift
  ! shift/reduce conflict for CMD_DISPLACE resolved as shift
  ! shift/reduce conflict for CMD_INTEGRAL resolved as shift
  ! shift/reduce conflict for CMD_LIST resolved as shift
  ! shift/reduce conflict for CMD_OVERSTRIKE resolved as shift
  ! shift/reduce conflict for CMD_ARRAY resolved as shift
  ! shift/reduce conflict for CMD_BOX resolved as shift
  ! shift/reduce conflict for TEXT resolved as shift
  ! shift/reduce conflict for OPERATOR resolved as shift
    RBRACE          reduce using rule 2 (expression -> expression expression .)
    COMMA           reduce using rule 2 (expression -> expression expression .)
    SEMICOLON       reduce using rule 2 (expression -> expression expression .)
    RPAREN          reduce using rule 2 (expression -> expression expression .)
    CMD_FRACTION    shift and go to state 5
    IDENTIFIER      shift and go to state 6
    NUMBER          shift and go to state 7
    CMD_RADICAL     shift and go to state 8
    CMD_SUP         shift and go to state 9
    CMD_SUB         shift and go to state 10
    CMD_ALIGN_INC   shift and go to state 11
    CMD_ALIGN_DEC   shift and go to state 12
    CMD_BRACKET     shift and go to state 13
    CMD_DISPLACE    shift and go to state 14
    CMD_INTEGRAL    shift and go to state 15
    CMD_LIST        shift and go to state 16
    CMD_OVERSTRIKE  shift and go to state 17
    CMD_ARRAY       shift and go to state 18
    CMD_BOX         shift and go to state 19
    TEXT            shift and go to state 20
    OPERATOR        shift and go to state 21

  ! CMD_FRACTION    [ reduce using rule 2 (expression -> expression expression .) ]
  ! IDENTIFIER      [ reduce using rule 2 (expression -> expression expression .) ]
  ! NUMBER          [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_RADICAL     [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_SUP         [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_SUB         [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_ALIGN_INC   [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_ALIGN_DEC   [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_BRACKET     [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_DISPLACE    [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_INTEGRAL    [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_LIST        [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_OVERSTRIKE  [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_ARRAY       [ reduce using rule 2 (expression -> expression expression .) ]
  ! CMD_BOX         [ reduce using rule 2 (expression -> expression expression .) ]
  ! TEXT            [ reduce using rule 2 (expression -> expression expression .) ]
  ! OPERATOR        [ reduce using rule 2 (expression -> expression expression .) ]

    expression                     shift and go to state 22

state 23

    (1) eq_field -> LBRACE EQ expression RBRACE .

    $end            reduce using rule 1 (eq_field -> LBRACE EQ expression RBRACE .)


state 24

    (3) expression -> CMD_FRACTION LPAREN . expression COMMA expression RPAREN
    (4) expression -> CMD_FRACTION LPAREN . expression SEMICOLON expression RPAREN
    (2) expression -> . expression expression
    (3) expression -> . CMD_FRACTION LPAREN expression COMMA expression RPAREN
    (4) expression -> . CMD_FRACTION LPAREN expression SEMICOLON expression RPAREN
    (5) expression -> . IDENTIFIER
    (6) expression -> . NUMBER
    (7) expression -> . CMD_RADICAL LPAREN expression COMMA expression RPAREN
    (8) expression -> . CMD_RADICAL LPAREN expression RPAREN
    (9) expression -> . CMD_SUP LPAREN expression RPAREN
    (10) expression -> . CMD_SUB LPAREN expression RPAREN
    (11) expression -> . CMD_ALIGN_INC LPAREN expression RPAREN
    (12) expression -> . CMD_ALIGN_DEC LPAREN expression RPAREN
    (13) expression -> . CMD_BRACKET LPAREN expression RPAREN
    (14) expression -> . CMD_BRACKET bracket_options LPAREN expression RPAREN
    (17) expression -> . CMD_DISPLACE LPAREN RPAREN
    (18) expression -> . CMD_DISPLACE LPAREN expression RPAREN
    (19) expression -> . CMD_DISPLACE displace_options LPAREN RPAREN
    (20) expression -> . CMD_DISPLACE displace_options LPAREN expression RPAREN
    (23) expression -> . CMD_INTEGRAL LPAREN expression COMMA expression COMMA expression RPAREN
    (24) expression -> . CMD_INTEGRAL integral_options LPAREN expression COMMA expression COMMA expression RPAREN
    (27) expression -> . CMD_LIST LPAREN list_elements RPAREN
    (31) expression -> . CMD_OVERSTRIKE LPAREN overstrike_elements RPAREN
    (32) expression -> . CMD_OVERSTRIKE overstrike_options LPAREN overstrike_elements RPAREN
    (37) expression -> . CMD_ARRAY LPAREN array_elements RPAREN
    (38) expression -> . CMD_ARRAY array_options LPAREN array_elements RPAREN
    (45) expression -> . CMD_BOX LPAREN expression RPAREN
    (46) expression -> . CMD_BOX box_options LPAREN expression RPAREN
    (49) expression -> . TEXT
    (50) expression -> . OPERATOR

    CMD_FRACTION    shift and go to state 5
    IDENTIFIER      shift and go to state 6
    NUMBER          shift and go to state 7
    CMD_RADICAL     shift and go to state 8
    CMD_SUP         shift and go to state 9
    CMD_SUB         shift and go to state 10
    CMD_ALIGN_INC   shift and go to state 11
    CMD_ALIGN_DEC   shift and go to state 12
    CMD_BRACKET     shift and go to state 13
    CMD_DISPLACE    shift and go to state 14
    CMD_INTEGRAL    shift and go to state 15
    CMD_LIST        shift and go to state 16
    CMD_OVERSTRIKE  shift and go to state 17
    CMD_ARRAY       shift and go to state 18
    CMD_BOX         shift and go to state 19
    TEXT            shift and go to state 20
    OPERATOR        shift and go to state 21

    expression                     shift and go to state 50

state 25

    (7) expression -> CMD_RADICAL LPAREN . expression COMMA expression RPAREN
    (8) expression -> CMD_RADICAL LPAREN . expression RPAREN
    (2) expression -> . expression expression
    (3) expression -> . CMD_FRACTION LPAREN expression COMMA expression RPAREN
    (4) expression -> . CMD_FRACTION LPAREN expression SEMICOLON expression RPAREN
    (5) expression -> . IDENTIFIER
    (6) expression -> . NUMBER
    (7) expression -> . CMD_RADICAL LPAREN expression COMMA expression RPAREN
    (8) expression -> . CMD_RADICAL LPAREN expression RPAREN
    (9) expression -> . CMD_SUP LPAREN expression RPAREN
    (10) expression -> . CMD_SUB LPAREN expression RPAREN
    (11) expression -> . CMD_ALIGN_INC LPAREN expression RPAREN
    (12) expression -> . CMD_ALIGN_DEC LPAREN expression RPAREN
    (13) expression -> . CMD_BRACKET LPAREN expression RPAREN
    (14) expression -> . CMD_BRACKET bracket_options LPAREN expression RPAREN
    (17) expression -> . CMD_DISPLACE LPAREN RPAREN
    (18) expression -> . CMD_DISPLACE LPAREN expression RPAREN
    (19) expression -> . CMD_DISPLACE displace_options LPAREN RPAREN
    (20) expression -> . CMD_DISPLACE displace_options LPAREN expression RPAREN
    (23) expression -> . CMD_INTEGRAL LPAREN expression COMMA expression COMMA expression RPAREN
    (24) expression -> . CMD_INTEGRAL integral_options LPAREN expression COMMA expression COMMA expression RPAREN
    (27) expression -> . CMD_LIST LPAREN list_elements RPAREN
    (31) expression -> . CMD_OVERSTRIKE LPAREN overstrike_elements RPAREN
    (32) expression -> . CMD_OVERSTRIKE overstrike_options LPAREN overstrike_elements RPAREN
    (37) expression -> . CMD_ARRAY LPAREN array_elements RPAREN
    (38) expression -> . CMD_ARRAY array_options LPAREN array_elements RPAREN
    (45) expression -> . CMD_BOX LPAREN expression RPAREN
    (46) expression -> . CMD_BOX box_options LPAREN expression RPAREN
    (49) expression -> . TEXT
    (50) expression -> . OPERATOR

    CMD_FRACTION    shift and go to state 5
    IDENTIFIER      shift and go to state 6
    NUMBER          shift and go to state 7
    CMD_RADICAL     shift and go to state 8
    CMD_SUP         shift and go to state 9
    CMD_SUB         shift and go to state 10
    CMD_ALIGN_INC   shift and go to state 11
    CMD_ALIGN_DEC   shift and go to state 12
    CMD_BRACKET     shift and go to state 13
    CMD_DISPLACE    shift and go to state 14
    CMD_INTEGRAL    shift and go to state 15
    CMD_LIST        shift and go to state 16
    CMD_OVERSTRIKE  shift and go to state 17
    CMD_ARRAY       shift and go to state 18
    CMD_BOX         shift and go to state 19
    TEXT            shift and go to state 20
    OPERATOR        shift and go to state 21

    expression                     shift and go to state 51

state 26
